--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="./src/assets/logo/black-logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DSG</title>
+
+
+
   <!-- Satoshi Font  -->
   <link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700,900,1&display=swap" rel="stylesheet">
   <!-- Bootstrap  -->
@@ -16,10 +19,13 @@
 
 <body>
   <div id="root"></div>
+
+
   <!-- Bootstrap Popper  -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
+
   <!-- Bootstrap min -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
@@ -27,6 +33,7 @@
 
   <!-- main tsx  -->
   <script type="module" src="/src/main.tsx"></script>
+
 </body>
 
 </html>
