--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DSG</title>
 
+  <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
 
 
   <!-- Satoshi Font  -->
@@ -20,6 +21,7 @@
 <body>
   <div id="root"></div>
 
+  <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
 
   <!-- Bootstrap Popper  -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -33,6 +35,15 @@
 
   <!-- main tsx  -->
   <script type="module" src="/src/main.tsx"></script>
+<!-- 
+  <script>
+    AOS.init({
+      once:true,
+        duration: 1000, // values from 0 to 3000, with step 50ms
+
+    });
+  </script> -->
+
 
 </body>
 
